--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -33,15 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = psycopg2.connect(database=\"walkability\", user=\"mtenney\", password=\"12qwaszx!@\",\n",
+    "pwd = open(\"./password\",'r').readline()\n",
+    "\n",
+    "con = psycopg2.connect(database=\"walkability\", user=\"mtenney\", password=pwd,\n",
     "    host=\"172.19.118.205\",port=\"5432\")\n",
     "pednet= gpd.read_postgis('SELECT * FROM compliance.att_pednet_all_in',con)\n",
     "G = create_graph(pednet)\n",
-    "#from G to urbanaccess network model - one node idx,x,y one edge from to weight\n"
+    "#from G to urbanaccess network model - one node idx,x,y one edge from to weight\n",
+    "0"
    ]
   },
   {
