--- a/projects/walkability/code/Attribute_topologically_corrected_pednet_with_centreline_and_transportation_attributes.ipynb
+++ b/projects/walkability/code/Attribute_topologically_corrected_pednet_with_centreline_and_transportation_attributes.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "#connecting to db ~ making connection\n",
     "#engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/sandbox')\n",
-    "con = psycopg2.connect(database=\"sandbox\", user=\"postgres\", password=\"1234\",\n",
+    "pwd = open(\"./password\",'r').readline()\n",
+    "con = psycopg2.connect(database=\"sandbox\", user=\"postgres\", password=pwd,\n",
     "    host=\"172.19.118.205\",port=\"5432\")\n",
     "curs = con.cursor()"
    ]
