--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -114,8 +114,8 @@
     }
    ],
    "source": [
-    "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=1234,\n",
-    "    host=\"172.19.118.205\",port=\"5432\")\n",
+    "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=*,\n",
+    "    host=\"172.19.118.205\",port=\"***\")\n",
     "pednet= gpd.read_postgis('SELECT * FROM compliance.att_pednet_all_in',con)\n",
     "pednet['distance'] = pednet.geom.length\n",
     "pednet['distance']"
