--- a/projects/real_estate/code/rental_prices_csv cleaning.ipynb
+++ b/projects/real_estate/code/rental_prices_csv cleaning.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# get cencus tract\n",
-    "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=1234,\n",
+    "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=****,\n",
     "    host=\"172.19.118.205\",port=\"5432\")\n",
     "ct = gpd.read_postgis('SELECT * FROM walkability.public.census_tracts_blank',con)"
    ]
@@ -178,8 +178,8 @@
    "outputs": [],
    "source": [
     "#import sys,os,os.path\n",
-    "#os.environ['HTTP_PROXY']=\"http://asulaim:8888@137.15.73.132:8080\"\n",
-    "#os.environ['HTTPS_PROXY']=\"https://asulaim:8888@137.15.73.132:8080\"\n",
+    "#os.environ['HTTP_PROXY']=\"http://**:8080\"\n",
+    "#os.environ['HTTPS_PROXY']=\"https://**:8080\"\n",
     "#import requests\n",
     "#from contextlib import closing\n",
     "#import csv\n",
@@ -200,7 +200,7 @@
    "source": [
     "\n",
     "#df = pd.read_csv('/media/DATADRIVE/realestate/rental_prices/census_tracts/bedr_type_2010.csv')\n",
-    "#ftp://asulaim@172.19.118.205/media/DATADRIVE/walkability/ablajan/str_size_2010.csv\n",
+    "#**",
     "#df = pd.read_csv('/media/DATADRIVE/walkability/ablajan/str_size_2010.csv')\n",
     "df = pd.read_csv('/media/DATADRIVE/realestate/rental_prices/census_tracts/bedr_type_2018.csv', delimiter= \",\", skiprows=2)"
    ]
