--- a/projects/real_estate/code/rental_prices_csv cleaning.ipynb
+++ b/projects/real_estate/code/rental_prices_csv cleaning.ipynb
@@ -981,7 +981,7 @@
    "source": [
     "# get sandbox connection\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:***@172.19.118.205:5432/walkability')\n",
     "df.to_sql('bedr_type_2018', engine)\n"
    ]
   },
@@ -1176,7 +1176,7 @@
    "outputs": [],
    "source": [
     "# Creating SQLAlchemy's engine to use\n",
-    "engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:****@172.19.118.205:5432/walkability')\n",
     "\n",
     "#shdf['geometry'] = shdf['geom'].apply(lambda x: WKTElement(x.wkt, srid=2019))\n",
     "\n",
@@ -1792,7 +1792,7 @@
    "source": [
     "# get database connection and save data\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:****@172.19.118.205:5432/walkability')\n",
     "df.to_sql('str_size_2018', engine)"
    ]
   },
