--- a/projects/energy/code/hydro2city.ipynb
+++ b/projects/energy/code/hydro2city.ipynb
@@ -11939,15 +11939,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-32-e8c430ce6100>, line 26)",
+     "evalue": "EOL while scanning string literal (<ipython-input-33-75bbecfd9c85>, line 26)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-e8c430ce6100>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    engine = create_engine('postgresql://kmerrem:dogface113@172.19.118.205:5432/gisdata’)\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-75bbecfd9c85>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    engine = create_engine('postgresql://kmerrem:password@172.19.118.205:5432/gisdata’)\u001b[0m\n\u001b[0m                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
