--- a/projects/energy/code/hydro2city.ipynb
+++ b/projects/energy/code/hydro2city.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +25,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "password = open('password.ipynb','r').readline()\n",
+    "password = open('password.txt','r').readline()\n",
+    "username = 'kmerrem'\n",
     "\n",
     "#conn = psycopg2.connect(host=\"localhost\",database=\"gisdata\", user=\"kmerrem\", password=password)\n",
     "#curs = conn.cursor()\n",
     "\n",
-    "conn = psycopg2.connect(host=\"172.19.118.205\",port=\"5432\",database=\"gisdata\", user=\"kmerrem\", password=password)\n",
-    "curs = conn.cursor()\n"
+    "#psycopg2 is used for postgres, can't use this conn to write with\n",
+    "# conn = psycopg2.connect(host=\"172.19.118.205\",port=\"5432\",database=\"gisdata\", user=\"kmerrem\", password=password)\n",
+    "# curs = conn.cursor()\n",
+    "\n",
+    "#this is to write from geopandas to postgis table \n",
+    "gisdata_engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/gisdata' %(username,password))\n",
+    "walkability_engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/walkability' %(username,password))\n",
+    "\n",
+    "# con = psycopg2.connect(host=\"172.19.118.205\",port=\"5432\",database=\"walkability\", user=\"kmerrem\", password=password)\n",
+    "# curs = con.cursor()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parcels = gpd.read_postgis(\"select * from public.mun_parcel_mtm\", conn, 'geom')"
+    "parcels = gpd.read_postgis(\"select * from public.mun_parcel_mtm\", gisdata_engine, 'geom')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buildings = gpd.read_postgis(\"select * from public.topo_building\", walkability_engine, 'geom')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3016,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3069,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3099,7 @@
        "Name: hydro, dtype: int64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3432,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3490,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3560,7 +3579,7 @@
        "Name: CAT3, Length: 9050, dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5592,7 +5611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7511,16 +7530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f84a0da1e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f849b8c1d30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7547,7 +7566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7610,7 +7629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9686,7 +9705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9699,7 +9718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9708,7 +9727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -9716,10 +9735,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f84a3e8c6a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8498a32ba8>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9743,7 +9762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -9777,16 +9796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f84a3fca748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f84937266a0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -11939,52 +11958,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-33-75bbecfd9c85>, line 26)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-75bbecfd9c85>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    engine = create_engine('postgresql://kmerrem:password@172.19.118.205:5432/gisdata’)\u001b[0m\n\u001b[0m                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/opt/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/opt/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:3697: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  errors=errors)\n"
      ]
     }
    ],
    "source": [
-    "#trying to figure out how to write the layer or just do a csv extraction\n",
+    "#writing to layer\n",
     "\n",
-    "#city_parcel.to_sql('city_parcel_hydro', con=engine, if_exists='replace', index=False, dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})\n",
-    "#engine.execute(\"SELECT * FROM users\").fetchall()\n",
-    "#city_parcel.to_sql('city_parcel_hydro', conn, if_exists='replace', index=False, dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})\n",
-    "#engine.execute(\"SELECT * FROM users\").fetchall()\n",
     "\n",
-    "#engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/walkability', pool_size=10, max_overflow=20)\n",
-    "#con = engine.connect()\n",
     "\n",
-    "#conn = psycopg2.connect(host=\"172.19.118.205\",port=\"5432\",database=\"gisdata\", user=\"kmerrem\", password=password)\n",
-    "#curs = conn.cursor()\n",
-    "\n",
-    "#conn = engine.connect()\n",
-    "#city_parcel.to_sql('city_parcel_hydro', conn = engine, if_exists='replace', index=False, dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})\n",
-    "\n",
-    "password = open('password.ipynb','r').readline()\n",
-    "\n",
-    "#engine = create_engine('postgresql://username:password@172.19.118.205:5432/database’) \n",
+    "password = open('./password.txt','r').readline()\n",
+    "                \n",
     "\n",
     "#using string wildcards to input the username/password variables %s means input text here \n",
-    "#engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/database’ %(username,password))\n",
+    "#engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/gisdata' %(kmerrem,password))\n",
+    "username = 'kmerrem'\n",
+    "#print('postgresql://%s:%s@172.19.118.205:5432/gisdata' %(username,password))\n",
+    "engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/gisdata' %(username,password))\n",
     "\n",
-    "#engine = create_engine('postgresql://kmerrem:password=password@172.19.118.205:5432/gisdata’) \n",
-    "                       \n",
-    "engine = create_engine('postgresql://kmerrem:password@172.19.118.205:5432/gisdata’) \n",
-    "#using string wildcards to input the username/password variables %s means input text here \n",
-    "#engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/gisdata’ %(kmerrem,password))\n",
+    "#selecting only city parcels that touches_hydro flag is true\n",
+    "city_parcel_copy = city_parcel[city_parcel.touches_hydro == True ]\n",
     "\n",
-    "#conn = engine.connect()\n",
-    "#city_parcel.to_sql('city_parcel_hydro', conn = engine, if_exists='replace', index=False, dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})\n",
+    "city_parcel_copy['geometry'] = city_parcel_copy['geom']\n",
     "\n",
-    "\n"
+    "city_parcel_copy['geom'] = city_parcel_copy['geometry'].apply(lambda x: WKTElement(x.wkt, srid=2019))\n",
+    "\n",
+    "#drop the geometry column as it is now duplicative\n",
+    "city_parcel_copy.drop('geometry', 1, inplace=True)\n",
+    "\n",
+    "# Use 'dtype' to specify column's type\n",
+    "# For the geom column, we will use GeoAlchemy's type 'Geometry'\n",
+    "city_parcel_copy.to_sql('city_parcel_hydro', gisdata_engine, if_exists='replace', index=False, \n",
+    "                         dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})\n"
    ]
   },
   {
