--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -1484,13 +1484,13 @@
     "    group\n",
     "    c +=1\n",
     "    buildings.loc[group.index,'distance_schools_median'] = school_walk_distances.loc[ix].median(axis=0)\n",
-    "    buildings.loc[group.index,'minutes_schools_median'] = buildings.loc[ix,'minutes_schools_median']/(1.2*60)\n",
+    "    buildings.loc[group.index,'minutes_schools_median'] = buildings.loc[ix,'d_sc_{}'.format(i)]/(1.2*60)\n",
     "    buildings.loc[group.index,'distance_hospitals_median'] = hospital_walk_distances.loc[ix].median(axis=0)\n",
-    "    buildings.loc[group.index,'minutes_hospitals_median'] = buildings.loc[ix,'minutes_hospitals_median']/(1.2*60)\n",
+    "    buildings.loc[group.index,'minutes_hospitals_median'] = buildings.loc[ix,'d_hp_{}'.format(i)]/(1.2*60)\n",
     "    buildings.loc[group.index,'distance_librarys_median'] = library_walk_distances.loc[ix].median(axis=0)\n",
-    "    buildings.loc[group.index,'minutes_librarys_median'] = buildings.loc[ix,'minutes_librarys_median']/(1.2*60)\n",
+    "    buildings.loc[group.index,'minutes_librarys_median'] = buildings.loc[ix,'d_lb_{}'.format(i)]/(1.2*60)\n",
     "    buildings.loc[group.index,'distance_ttc_stops_median'] = ttc_stop_walk_distances.loc[ix].median(axis=0)\n",
-    "    buildings.loc[group.index,'minutes_ttc_stops_median'] = buildings.loc[ix,'minutes_ttc_stops_median']/(1.2*60)\n",
+    "    buildings.loc[group.index,'minutes_ttc_stops_median'] = buildings.loc[ix,'d_ttcst_{}'.format(i)]/(1.2*60)\n",
     "\n",
     "    for i in range(1,11,1):\n",
     "        buildings.loc[group.index,'d_sc_{}'.format(i)] = school_walk_distances.loc[ix]['d_sc_{}'.format(i)]\n",
