--- a/projects/walkability/code/Creating Histogram.ipynb
+++ b/projects/walkability/code/Creating Histogram.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
     "    plt.ylabel('Frequency', fontweight=\"bold\");\n",
     "    plt.legend(loc=0)\n",
     "    #plt.savefig('./m_fc_1.jpg')\n",
-    "    plt.savefig('./col.jpg')\n",
+    "    plt.savefig('col{0}.jpg'.format(i))\n",
     "    fig.clf()"
    ]
   },
