--- a/projects/iot/docs/README
+++ b/projects/iot/docs/README
@@ -1,1 +1,1 @@
-NOT HAPPY ABOUT POD5, POD9, POD10 - STILL NEED TO QC DATA, NOT CLEAN ENOUGH
+NOT QUITE HAPPY ABOUT POD5, POD9, POD10 - STILL NEED TO QC DATA
