--- a/projects/iot/docs/README
+++ b/projects/iot/docs/README
@@ -1,2 +1,2 @@
-NEED TO REVIEW POD5, POD9 - 99% GOOD
-POD1, POD3, POD6, POD7, POD8, POD10 ARE 100% OK - ALSO LOADED IN POSTGRES (IOTS SCHEMA).
+NEED TO REVIEW POD9 - 99% GOOD
+POD1, POD3, POD5, POD6, POD7, POD8, POD10 ARE 100% OK - ALSO LOADED IN POSTGRES (IOTS SCHEMA).
