--- a/projects/iot/docs/README
+++ b/projects/iot/docs/README
@@ -1,2 +1,1 @@
-NEED TO REVIEW POD9 - 99% GOOD
-POD1, POD3, POD5, POD6, POD7, POD8, POD10 ARE 100% OK - ALSO LOADED IN POSTGRES (IOTS SCHEMA).
+ALL POD COLLECTED DATA LOADED IN POSTGRES (IOTS SCHEMA).
