--- a/projects/walkability/code/Histogram.ipynb
+++ b/projects/walkability/code/Histogram.ipynb
@@ -38,8 +38,8 @@
     "username = 'postgres'\n",
     "walkability_engine = create_engine('postgresql://%s:%s@172.19.118.205:5432/walkability' %(username,password))\n",
     "#summary = gpd.read_postgis(\"select * from results.census_summary_walktimes_fin\", walkability_engine, 'geom')\n",
-    "#buildings = gpd.read_postgis(\"select * from staging.buildings327\", walkability_engine, 'geom')\n",
-    "buildings = gpd.read_postgis(\"select * from staging.buildings527\", walkability_engine, 'geom')"
+    "\n",
+    "buildings = gpd.read_postgis(\"select * from final.buildings\", walkability_engine, 'geom')"
    ]
   },
   {
