update building and crosswalk summary

--- a/projects/walkability/code/SummarizeBuildings.ipynb
+++ b/projects/walkability/code/SummarizeBuildings.ipynb
@@ -40,12 +40,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "#buildings = gpd.read_postgis(\"select * from staging.buildings327\", walkability_engine, 'geom')\n",
-    "buildings = gpd.read_postgis(\"select * from staging.buildings527\", walkability_engine, 'geom')\n",
+    "\n",
+    "buildings = gpd.read_postgis(\"select * from final.buildings\", walkability_engine, 'geom')\n",
     "cts = gpd.read_postgis(\"SELECT * FROM public.census_tracts_blank\", walkability_engine, 'geom')\n",
     "#pednet = gpd.read_postgis(\"select * from compliance.att_pednet_all_in WHERE geom IS NOT NULL\", walkability_engine, 'geom')\n",
     "#pednet = gpd.read_postgis(\"select * from staging.a_z1_pednet WHERE geom IS NOT NULL\", walkability_engine, 'geom')\n",
-    "pednet = gpd.read_postgis(\"select * from final.pednet_051519_z WHERE geom IS NOT NULL\", walkability_engine, 'geom')"
+    "pednet = gpd.read_postgis(\"select * from final.pednet WHERE geom IS NOT NULL\", walkability_engine, 'geom')"
    ]
   },
   {
@@ -8061,7 +8061,7 @@
     "cts1.drop('geometry', 1, inplace=True)\n",
     "#Adds objectid as double. Need to change to integer\n",
     "cts1['objectid'] = cts1.index.astype(np.int64)\n",
-    "cts1.to_sql('census_summary_walktimes_fin_v', walkability_engine, schema='results', if_exists='replace', index=True, \n",
+    "cts1.to_sql('census_summary_walktimes', walkability_engine, schema='results', if_exists='replace', index=True, \n",
     "                         dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})"
    ]
   },
@@ -8096,7 +8096,7 @@
     "#Adds objectid as double.\n",
     "#summary_buildings1['objectid'] = summary_buildings1.index.astype(np.int64)\n",
     "#summary_buildings1['objectid'] = list(range(1,summary_buildings1.shape[0]))\n",
-    "summary_buildings1.to_sql('buildings_summary_walktimes_fin_v',walkability_engine, schema='results', if_exists='replace', index=True, \n",
+    "summary_buildings1.to_sql('buildings_summary_walktimes',walkability_engine, schema='results', if_exists='replace', index=True, \n",
     "                         dtype={'geom': Geometry('MULTIPOLYGON', srid=2019)})"
    ]
   },
@@ -8116,7 +8116,7 @@
     "#Adds objectid as double.\n",
     "#objectid = 9306 is duplicate\n",
     "#pednet_sum1['objectid'] = list(range(1,pednet_sum1.shape[0]))\n",
-    "pednet_sum1.to_sql('pednet_summary_walktimes_fin_v', walkability_engine, schema='results', if_exists='replace', index=True, \n",
+    "pednet_sum1.to_sql('pednet_summary_walktimes', walkability_engine, schema='results', if_exists='replace', index=True, \n",
     "                         dtype={'geom': Geometry('MULTILINESTRING', srid=2019)})"
    ]
   },
