--- a/projects/Machine Learning/Creating Toronto Street Point Sample Data.ipynb
+++ b/projects/Machine Learning/Creating Toronto Street Point Sample Data.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# data connection \n",
-    "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=1234,    host=\"172.19.118.205\",port=\"5432\")"
+    "con = psycopg2.connect(database=\"***\", user=\"***\", password=**,    host=\"***.205\",port=\"5432\")"
    ]
   },
   {
