--- a/projects/real_estate/code/rental_prices_csv cleaning.ipynb
+++ b/projects/real_estate/code/rental_prices_csv cleaning.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "# get cencus tract\n",
     "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=****,\n",
-    "    host=\"172.19.118.205\",port=\"5432\")\n",
+    "    host=\"*****\",port=\"5432\")\n",
     "ct = gpd.read_postgis('SELECT * FROM walkability.public.census_tracts_blank',con)"
    ]
   },
@@ -980,7 +980,7 @@
    "source": [
     "# get sandbox connection\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:***@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:***@***:5432/walkability')\n",
     "df.to_sql('bedr_type_2018', engine)\n"
    ]
   },
@@ -1175,7 +1175,7 @@
    "outputs": [],
    "source": [
     "# Creating SQLAlchemy's engine to use\n",
-    "engine = create_engine('postgresql://postgres:****@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:****@*****:5432/walkability')\n",
     "\n",
     "#shdf['geometry'] = shdf['geom'].apply(lambda x: WKTElement(x.wkt, srid=2019))\n",
     "\n",
@@ -1791,7 +1791,7 @@
    "source": [
     "# get database connection and save data\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:****@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:****@1****:5432/walkability')\n",
     "df.to_sql('str_size_2018', engine)"
    ]
   },
@@ -2026,7 +2026,7 @@
    "source": [
     "# get database connection and save data\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:1234@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:***@*****:5432/walkability')\n",
     "dfc.to_sql('constr_year_2018', engine)"
    ]
   }
