--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "# database connection\n",
     "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=1234,\n",
-    "    host=\"172.19.118.205\",port=\"5432\")\n",
+    "    host=\"****\",port=\"5432\")\n",
     "pednet= gpd.read_postgis('SELECT * FROM public.pednet100m',con,crs={'init': 'epsg:2019'})\n",
     "pednet['distance'] = pednet.geom.length\n",
     "pednet['distance']"
@@ -400,7 +400,7 @@
     "                               pd.DataFrame([edges1.length]).T,\n",
     "                               twoway=True)\n",
     "\n",
-    "transit_ped_net.save_hdf5('/media/DATADRIVE/walkability/ped_net_final_0320.hd5')"
+    "transit_ped_net.save_hdf5('/media/DATADRIVE/walkability/ped_net_final_0525.hd5')"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "outputs": [],
    "source": [
     "# read the network from saved file\n",
-    "transit_ped_net = pdna.Network.from_hdf5('/media/DATADRIVE/walkability/ped_net_final_0320.hd5')"
+    "transit_ped_net = pdna.Network.from_hdf5('/media/DATADRIVE/walkability/ped_net_final_0525.hd5')"
    ]
   },
   {
@@ -1293,7 +1293,7 @@
    "outputs": [],
    "source": [
     "# Creating SQLAlchemy's engine to use\n",
-    "engine = create_engine('postgresql://postgres:****@172.19.118.205:5432/walkability')\n",
+    "engine = create_engine('postgresql://postgres:****@****:5432/walkability')\n",
     "\n",
     "buildings['geometry'] = buildings['geom'].apply(lambda x: WKTElement(x.wkt, srid=2019))\n",
     "\n",
