--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adsd creating netwotk graph code\n",
+    "# add creating netwotk graph code\n",
     "def create_graph(gdf, precision=3, simplify=1):\n",
     "    '''Create a networkx DiGraph given a GeoDataFrame of lines. Every line will\n",
     "    correspond to two directional graph edges, one forward, one reverse. The\n",
@@ -430,7 +430,7 @@
    "source": [
     "# load data from pg database total 23 layers\n",
     "con = psycopg2.connect(database=\"walkability\", user=\"postgres\", password=****,\n",
-    "    host=\"172.19.118.205\",port=\"5432\")\n",
+    "    host=\"****\",port=\"5432\")\n",
     "#service layers\n",
     "foodconv = gpd.read_postgis('SELECT * FROM staging.food_convenience_store',con,crs={'init': 'epsg:2019'})\n",
     "fastfood = gpd.read_postgis('SELECT * FROM staging.food_fastfood',con,crs={'init': 'epsg:2019'})\n",
