--- a/projects/walkability/code/UrbanAccess.ipynb
+++ b/projects/walkability/code/UrbanAccess.ipynb
@@ -364,7 +364,7 @@
     "    return edges\n",
     "    \n",
     "    \n",
-    "edges1 = parallelize_dataframe(edges, set_node_id)\n",
+    "edges = parallelize_dataframe(edges, set_node_id)\n",
     "end = time.time()\n",
     "print(end - start)\n"
    ]
@@ -378,8 +378,8 @@
     "#Initialize the Pandana network \n",
     "#https://github.com/gboeing/urban-data-science/blob/master/20-Accessibility-Walkability/pandana-accessibility-demo-simple.ipynb\n",
     "# if there is an error, please run this before creating pdna network\n",
-    "edges1[\"to\"] = edges[\"to\"].astype(int)\n",
-    "edges1[\"from\"] = edges[\"from\"].astype(int)\n"
+    "edges[\"to\"] = edges[\"to\"].astype(int)\n",
+    "edges[\"from\"] = edges[\"from\"].astype(int)\n"
    ]
   },
   {
@@ -395,8 +395,8 @@
     "\n",
     "transit_ped_net = pdna.Network(nodes[\"x\"],\n",
     "                               nodes[\"y\"],\n",
-    "                               edges1[\"from\"],\n",
-    "                               edges1[\"to\"],\n",
+    "                               edges[\"from\"],\n",
+    "                               edges[\"to\"],\n",
     "                               pd.DataFrame([edges1.length]).T,\n",
     "                               twoway=True)\n",
     "\n",
