--- a/projects/Machine Learning/centerline_splitpoints.ipynb
+++ b/projects/Machine Learning/centerline_splitpoints.ipynb
@@ -290,8 +290,8 @@
     }
    ],
    "source": [
-    "# Creating points based on 200m distance if centerline road segments loger than 600m. points id will be 1,2,3,4 based on the number of division\n",
-    "#Otherwise, just get centerline midpoints. For example 200m distance based on centreline shapefile. Points id is defined as 99.\n",
+    "# Creating points based on 200m distance if centerline road segment length is longer than 600m. points id will be 1,2,3,4... based on the number of division\n",
+    "#Otherwise, just get the centerline midpoints is road segments length  is shorter than 600m. For example 200m distance based on centreline shapefile. Points id is defined as 99.\n",
     "# the input shapefile has to be in projection of WGS84, 4326\n",
     "\n",
     "geo_id_list =[]\n",
@@ -419,6 +419,8 @@
     "t200m = gpd.read_file('tmp/splitpnts.shp')\n",
     "df = pd.DataFrame(t200m)\n",
     "t200m = pd.merge(left=df, left_index=True , right=df3, right_index=True, how='inner')\n",
+    "# removing expresway \n",
+    "t200m= t200m.loc[t200m['fcode'] != 'Expressway']\n",
     "t200m['geometry'] = t200m['geometry'].apply(Point)\n",
     "crs = {'init': 'epsg:4326'}\n",
     "t200m = gpd.GeoDataFrame(t200m, crs=crs, geometry='geometry')\n",
