--- a/projects/Machine Learning/centerline_splitpoints.ipynb
+++ b/projects/Machine Learning/centerline_splitpoints.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "# Creating points based on 200m distance if centerline road segment length is longer than 600m. points id will be 1,2,3,4... based on the number of division\n",
-    "#Otherwise, just get the centerline midpoints is road segments length  is shorter than 600m. For example 200m distance based on centreline shapefile. Points id is defined as 99.\n",
+    "#Otherwise, just get the centerline midpoints if road segments length  is shorter than 600m. For example 200m distance based on centreline shapefile. Points id is defined as 99.\n",
     "# the input shapefile has to be in projection of WGS84, 4326\n",
     "\n",
     "geo_id_list =[]\n",
